2011-03-30  Shujing Zhao  <pearly.zhao@oracle.com>

	Clean the header files.
	include/
	* confname_add.h, door.h, ieeefp.h, objfs.h, param.h, priv.h, procfs.h,
	  types_blk.h, types_boolean.h, types_dev.h, types_lmid.h, types_off.h,
	  types_pad.h, types_posix.h, types_time.h, zmod.h, zone.h, sys/fp.h,
	  sys/old_procfs.h: Removed and moved the useful definitions to
	types_various.h. Change the files that include these files.
	* sys/types.h: Added.
	* types_various.h: Added definitions. 
	
	cmd/
	* dtrace.c, makefile: Move to the parent directory.
	
	libproc/
	* common/Pgcore.c: Removed.
	* common/makefile: Fixed.

2011-03-29  Shujing Zhao  <pearly.zhao@oracle.com>

	Remove pr_*.c files from libpro/common/.
	* libproc/common/makefile: Remove the pr_*.o from libproc.
	* libproc/common/libproc.h: Remove the declarations for the functions
	  definied at pr_*.c files.
	* libdtrace/dt_pid.c: Don't use pr_open and pr_close.
	* libproc/common/Psyscall.c: Don't use pr_lwp_exit.
	* include/types_various.h: Clean the definitions.

	* libdtrace/makefile: Fix.

2011-03-22  Shujing Zhao  <pearly.zhao@oracle.com>

	Remove the support to i386 and only support amd64.
	* makefile: Use D_ILP64 instead of D_ILP32.
	* libproc: Remove i386 and add amd64.
	* driver/dis_tables.c, driver/dis_tables.h: Move to common/dis/.

2011-03-11  Shujing Zhao  <pearly.zhao@oracle.com>

	* cmd/common/dtrace.c: Uncomment function dtrace_handle_proc.
	* include/types_various.h: Remove SIGCANCEL and SYS_forksys.
	* libdtrace/dt_proc.c (dt_proc_control): Trace SYS_fork instead of
	SYS_forksys. Use SIGUSR1 instead of SIGCANCEL. Use pthread_kill
	instead of _lwp_kill.
	(dt_proc_creat): Pass DT_PROC_STOP_IDLE to dt_proc_create_thread.
	* libport/time.c: Remove _lwp_kill.
	* runtest.sh: Update

2011-03-04  Shujing Zhao  <pearly.zhao@oracle.com>

	* libproc/common/Pcontrol.c: Comment the codes about write ctf file.
	Add ptrace code if needed.

2011-02-25  Shujing Zhao  <pearly.zhao@oracle.com>
